--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20a0e436d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48e02db550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f20a080fc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f20a080fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48dfc8ff90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48e025c210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f20a0db4550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f20a0db4750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48e0233950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48e0233b90&gt;]</pre>
 </div>
 
 </div>
