--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efccc9ab9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb95c497d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efccc35cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efccc35ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb95919b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb95919d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efccc906590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efccc906790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb9561df50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb95ebb690&gt;]</pre>
 </div>
 
 </div>
