--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa27ba6fc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8583614950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa27be85990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa27be97e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8582fcdc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8582fcde50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa27c4312d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa27c43c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f858356f5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f858356f7d0&gt;]</pre>
 </div>
 
 </div>
