--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbad4f17d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94c927a510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbad4c05c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbad4c05e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94c334fbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94c334fdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbad51ac650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbad51ac850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94c38f0590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94c38f0790&gt;]</pre>
 </div>
 
 </div>
