--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61d9455310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3aa2d78f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d8e20fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61d9125d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3aa2730b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3aa2730d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d9715410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61d96c9650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3aa2cd2490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3aa2cd2690&gt;]</pre>
 </div>
 
 </div>
