--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f500fc37390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe9ab85a6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f500f89cc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f500f89ce50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9aaa38c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9aaa38e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f500fe41610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f500fe41810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9aafe15d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9aaa1a2d0&gt;]</pre>
 </div>
 
 </div>
