--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6cb36844d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93ae889c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cb3013c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cb3013e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93ad970d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93ad970f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cb35ba5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cb35ba7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93adf17690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93adf17890&gt;]</pre>
 </div>
 
 </div>
