--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa46e471c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34c54ae910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa46e4c2c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa46e4c2e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34c5176d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34c5176f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa46ea67550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa46ea67750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34c571e6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34c571e8d0&gt;]</pre>
 </div>
 
 </div>
