--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f998c46fc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe16a1976d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f998c4b2d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f998c4b2f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe16a1dbd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe16a1dbf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f998ca566d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f998ca568d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe16a781610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe16a781810&gt;]</pre>
 </div>
 
 </div>
