--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6bb1a5cf50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f683c881790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bb1725cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6bb1713f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f683ba64cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f683ba55b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bb1cce550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6bb1cb3190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f683bffd4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f683c0087d0&gt;]</pre>
 </div>
 
 </div>
