--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f402811b4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ab31be790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4027a96a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4027aabd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ab2e87dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ab2e87fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4028040350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f402804b650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ab342f690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ab342f890&gt;]</pre>
 </div>
 
 </div>
