--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ab31be790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa8f95b5c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ab2e87dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ab2e87fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8f8f6bd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8f8f6bf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ab342f690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ab342f890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8f9510650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8f9510850&gt;]</pre>
 </div>
 
 </div>
