--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14b272a8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9bf64a6610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14b23cc990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14b23ccb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bf6174cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bf6174ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14b299c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14b299c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bf6718590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bf6718790&gt;]</pre>
 </div>
 
 </div>
