--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ab1d8f310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff00ed07fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ab1ac6c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ab1ac6e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff00e6bcc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff00e6bce90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ab206b510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ab206b710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff00ec60690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff00ec60890&gt;]</pre>
 </div>
 
 </div>
