--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f773bc787d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc220656810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f773bcbea90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f773bcbec90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc220a7dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc220a7dcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f773c294490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f773c294690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc221021590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc221021790&gt;]</pre>
 </div>
 
 </div>
