--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ea5a72350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2428620e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ea5784b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ea5784d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2427faff90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f242858d1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ea5d43410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ea5d43610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2428566890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2428566a90&gt;]</pre>
 </div>
 
 </div>
