--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e4dd9dad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e88a281d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e4da65c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e4da65e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e886fab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e886fad50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e4e00e590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e4e00e790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e88ce9d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e88c9c650&gt;]</pre>
 </div>
 
 </div>
